--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.3|^8.0",
         "chuckrincon/lumen-config-discover": "^1.0",
         "laravel/lumen-framework": "^8.0",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "dev-develop",
+        "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
